@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.14
 
+  *) mod_deflate: Don't try to compress requests with a zero sized body.
+     PR 51350. [Stefan Fritsch]
+
   *) core: Fix startup on IP6-only systems. PR 50592. [Joe Orton,
      <root linkage white-void net>]
 
